In the middle of refactoring SpriteLibrary to make use of only SpriteSets and SpriteGroups; PositionCache attempted, not sure of effectiveness.